--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "portphp/steps": "^1.2",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
+        "symfony/dotenv": "*",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/dependency-injection": "*",
@@ -54,7 +55,6 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/debug-pack": "*",
-        "symfony/dotenv": "*",
         "symfony/maker-bundle": "^1.11",
         "symfony/panther": "^0.3.0",
         "symfony/phpunit-bridge": "4.2.*",
@@ -66,13 +66,7 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true,
-        "gitlab-domains": [
-            "git.athome-solution.fr"
-        ],
-        "gitlab-token": {
-            "git.athome-solution.fr": "gD3cgaqoj-zTSLweJUsD"
-        }
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
